--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-Index.html
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -17,22 +16,24 @@ Index.html
     
 </head>
 <body>
-    <h1 class="script">Jamie's Bakery</h1>
+     <header>
+         <h1 class="script">Jamie's Bakery</h1>
     <h2 class="script">For all your confectionary needs!</h2>
-    <p>Services include:</p>
+         <nav>
     <ul style="color: darkblue;">
-        <li>Cupcakes</li>
+        <li>  <a href="contact.html" target="_blank">Contact</a></li>
+        <li><a href="pricing.html" target="_blank">Pricing</a></li>
+    </ul>
+        </nav>
+         <p>Services Include...</p>
+         <ul> <li>Cupcakes</li>
         <li>Pies</li>
         <li>Custom Cakes</li>
-        <li>Cookies</li>
-        <li>Pastries</li>
-        <li>...and more!</li>
-    </ul>
-    <p style="font-style:italic;"> Please contact for a quote. Let me make your next big event special!</p>
-   <a href="pricing.html" target="_blank">Pricing</a>
-    <a href="contact.html" target="_blank">Contact</a>
+        <li>Cookies</li></ul>
+    <p style="font-style:italic;"> Please contact us for a quote. Let me make your next big event special!</p>
     <div><img id="image" alt="vanilla cupcakes" src="CSS/images/vanilla.jpg">
     <img alt="chocolate whoopie pies" src="CSS/images/whoopiepies.jpeg"></div>
+    </header> 
     <hr>
 </body>
 </html>
