--- a/index.html
+++ b/index.html
@@ -5,35 +5,58 @@
     <title>Jamie's Bakery</title>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <style>
-        body {background-color: #cdfee6;}
-        h1 {text-align: center;
-        border: 2px dashed #ffffff;}
-        h2 {text-align: center;}
-        p {font-size: 20px;
-        color: darkblue;
-        font-family: serif;}
+        body {
+            background-color: #cdfee6;
+        }
+
+        h1 {
+            text-align: center;
+            border: 2px dashed #ffffff;
+        }
+
+        h2 {
+            text-align: center;
+        }
+
+        p {
+            font-size: 20px;
+            color: darkblue;
+            font-family: serif;
+        }
     </style>
-    
+
 </head>
+
 <body>
-     <header>
-         <h1 class="script">Jamie's Bakery</h1>
-    <h2 class="script">For all your confectionary needs!</h2>
-         <nav>
-    <ul style="color: darkblue;">
-        <li>  <a href="contact.html" target="_blank">Contact</a></li>
-        <li><a href="pricing.html" target="_blank">Pricing</a></li>
-    </ul>
+    <header>
+        <a href="index.html"></a>
+        <img class="logo" src="CSS/images/cupcakelogo.png" alt="logo"/>
+        <div><h1 class="script">Jamie's Bakery</h1></div>
+        <div><h2 class="script">For all your confectionary needs!</h2></div> 
+        <nav>
+            <ul style="color: darkblue;">
+                <li><a href="contact.html" target="_blank">Contact</a></li>
+                <li><a href="pricing.html" target="_blank">Pricing</a></li>
+            </ul>
         </nav>
-         <p>Services Include...</p>
-         <ul> <li>Cupcakes</li>
-        <li>Pies</li>
-        <li>Custom Cakes</li>
-        <li>Cookies</li></ul>
-    <p style="font-style:italic;"> Please contact us for a quote. Let me make your next big event special!</p>
-    <div><img id="image" alt="vanilla cupcakes" src="CSS/images/vanilla.jpg">
-    <img alt="chocolate whoopie pies" src="CSS/images/whoopiepies.jpeg"></div>
-    </header> 
+        <div>
+            <p>Services Include...</p>
+            <ul>
+                <li>Cupcakes</li>
+                <li>Pies</li>
+                <li>Custom Cakes</li>
+                <li>Cookies</li>
+            </ul>
+        </div>
+        <div>
+            <p style="font-style:italic;"> Please contact me for a quote. Let me make your next big event special!</p>
+        </div>
+    </header>
+    <footer>
+        <div><img id="image" alt="vanilla cupcakes" src="CSS/images/vanilla.jpg">
+            <img alt="chocolate whoopie pies" src="CSS/images/whoopiepies.jpeg"></div>
+        &copy; 2018 Danner Enterprises
+    </footer>
     <hr>
 </body>
 </html>
