--- a/contact.html
+++ b/contact.html
@@ -16,21 +16,26 @@
     
 </head>
 <body>
-    <h1 class="script">Jamie's Bakery</h1>
-    <h2 class="script">For all your confectionary needs!</h2>
-    <p>Located in Hoosick Falls, NY and Rochester, NY</p>
-     <p>To contact, please send an email to jamiesbakery@gmail.com. When emailing for a specialty quote, please include...</p>
-    <ul style="color: darkblue;">
+    <header>
+    <a href="index.html">
+                <img class="logo" src="CSS/images/cupcakelogo.png" alt="logo"/>
+    <div><h1 class="script">Jamie's Bakery</h1></div>
+    <div><h2 class="script">For all your confectionary needs!</h2></div>
+    <div><p>Located in Hoosick Falls, NY and Rochester, NY</p></div>
+     <div><p>To contact, please send an email to jamiesbakery@gmail.com. When emailing for a specialty quote, please include...</p></div>
+    <div><ul style="color: darkblue;">
         <li>Your name</li>
         <li>The location and date of your event</li>
         <li>How many people the dessert(s) must feed</li>
         <li>Desired flavors, fillings, decorations, and any personalization</li>
         <li>Any special dietary concerns (i.e. vegan, gluten free, etc.)</li>
-    </ul>
-     <p style="font-style: italic;">Thank you for your interest!</p>
-    <a href="index.html" target="_blank">Home</a>
+    </ul></div>
+     <div><p style="font-style: italic;">Thank you for your interest!</p></div>
+        </header>
+        <footer>
+    <div><a href="index.html" target="_blank">Home</a></div>
     <div><img id="image" alt="blueberry muffins" src="CSS/images/blueberrymuffins.jpg">
     </div>
-    <hr>
+            </footer>
 </body>
 </html>
