--- a/pricing.html
+++ b/pricing.html
@@ -16,20 +16,25 @@
     
 </head>
 <body>
-    <h1 class="script">Jamie's Bakery</h1>
-    <h2 class="script">Pricing</h2>
-    <p>Please note: all prices are subject to change. Please contact me for a quote for a specialty cake or other special request.</p>
-    <ul style="color: darkblue;">
+    <header>
+        <a href="index.html">
+                <img class="logo" src="CSS/images/cupcakelogo.png" alt="logo"/>
+    <div><h1 class="script">Jamie's Bakery</h1></div>
+    <div><h2 class="script">Pricing</h2></div>
+    <div><p>Please note: all prices are subject to change. Please contact me for a quote for a specialty cake or other special request.</p></div>
+    <div><ul style="color: darkblue;">
         <li>Cupcakes: $22.00 per dozen</li>
         <li>Pies: (seasonal flavors) $15.00 each</li>
         <li>Custom Cakes: please contact me for a quote</li>
         <li>Cookies: $12.00 per dozen</li>
         <li>Pastries: $3.00 each, $24.00 per dozen</li>
-    </ul>
+    </ul></div>
+            </header>
+        <footer>
     <a href="contact.html" target="_blank">Contact</a>
     <a href="index.html" target="_blank">Home</a>
     <div>
     <img id="image" alt="birthday cake" src="CSS/images/birthdaycake.jpg"></div>
-    <hr>
+            </footer>
 </body>
 </html>
