Still Not Working

--- a/index.html
+++ b/index.html
@@ -29,16 +29,17 @@
 
 <body>
     <header>
-        <a href="index.html"></a>
-        <img class="logo" src="CSS/images/cupcakelogo.png" alt="logo"/>
-        <div><h1 class="script">Jamie's Bakery</h1></div>
-        <div><h2 class="script">For all your confectionary needs!</h2></div> 
+        <a href="index.html">
+        <img class="logo" src="CSS/images/cupcakelogo.png" alt="logo"/></a>
         <nav>
             <ul style="color: darkblue;">
                 <li><a href="contact.html" target="_blank">Contact</a></li>
                 <li><a href="pricing.html" target="_blank">Pricing</a></li>
             </ul>
         </nav>
+        <div><h1 class="script">Jamie's Bakery</h1></div>
+        <div><h2 class="script">For all your confectionary needs!</h2></div> 
+        
         <div>
             <p>Services Include...</p>
             <ul>
