Fixed CSS Issue

--- a/index.html
+++ b/index.html
@@ -3,30 +3,8 @@
 <head>
     <meta charset="utf-8">
     <title>Jamie's Bakery</title>
-    <link rel="stylesheet" type="text/css" href="css/styles.css">
-    <style>
-        body {
-            background-color: #cdfee6;
-        }
-
-        h1 {
-            text-align: center;
-            border: 2px dashed #ffffff;
-        }
-
-        h2 {
-            text-align: center;
-        }
-
-        p {
-            font-size: 20px;
-            color: darkblue;
-            font-family: serif;
-        }
-    </style>
-
+    <link rel="stylesheet" type="text/css" href="CSS/styles.css">
 </head>
-
 <body>
     <header>
         <a href="index.html">
@@ -37,25 +15,22 @@
                 <li><a href="pricing.html" target="_blank">Pricing</a></li>
             </ul>
         </nav>
-        <div><h1 class="script">Jamie's Bakery</h1></div>
-        <div><h2 class="script">For all your confectionary needs!</h2></div> 
-        
-        <div>
-            <p>Services Include...</p>
+        <h1 class="script">Jamie's Bakery</h1>
+        <h2 class="script">For all your confectionary needs!</h2>
+            <p style="text-align: left;">Services Include...</p>
             <ul>
                 <li>Cupcakes</li>
                 <li>Pies</li>
                 <li>Custom Cakes</li>
                 <li>Cookies</li>
             </ul>
-        </div>
-        <div>
             <p style="font-style:italic;"> Please contact me for a quote. Let me make your next big event special!</p>
-        </div>
     </header>
     <footer>
-        <div><img id="image" alt="vanilla cupcakes" src="CSS/images/vanilla.jpg">
-            <img alt="chocolate whoopie pies" src="CSS/images/whoopiepies.jpeg"></div>
+        <div>
+            <img id="image" alt="vanilla cupcakes" src="CSS/images/vanilla.jpg">
+            <img alt="chocolate whoopie pies" src="CSS/images/whoopiepies.jpeg">
+        </div>
         &copy; 2018 Danner Enterprises
     </footer>
     <hr>
