--- a/contact.html
+++ b/contact.html
@@ -3,39 +3,44 @@
 <head>
     <meta charset="utf-8">
     <title>Jamie's Bakery</title>
-    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link rel="stylesheet" type="text/css" href="CSS/styles.css">
     <style>
-        body {background-color: #cfdff5;}
-        h1 {text-align: center;
-        border: 2px dashed #ffffff;}
-        h2 {text-align: center;}
-        p {font-size: 20px;
-        color: darkblue;
-        font-family: serif;}
+        body {background-color: #cfdff5;} 
     </style>
     
 </head>
 <body>
     <header>
-    <a href="index.html">
-                <img class="logo" src="CSS/images/cupcakelogo.png" alt="logo"/>
-    <div><h1 class="script">Jamie's Bakery</h1></div>
-    <div><h2 class="script">For all your confectionary needs!</h2></div>
-    <div><p>Located in Hoosick Falls, NY and Rochester, NY</p></div>
-     <div><p>To contact, please send an email to jamiesbakery@gmail.com. When emailing for a specialty quote, please include...</p></div>
-    <div><ul style="color: darkblue;">
-        <li>Your name</li>
-        <li>The location and date of your event</li>
-        <li>How many people the dessert(s) must feed</li>
-        <li>Desired flavors, fillings, decorations, and any personalization</li>
-        <li>Any special dietary concerns (i.e. vegan, gluten free, etc.)</li>
-    </ul></div>
-     <div><p style="font-style: italic;">Thank you for your interest!</p></div>
-        </header>
-        <footer>
-    <div><a href="index.html" target="_blank">Home</a></div>
-    <div><img id="image" alt="blueberry muffins" src="CSS/images/blueberrymuffins.jpg">
+        <a href="index.html">
+            <img class="logo" src="CSS/images/cupcakelogo.png" alt="logo"/></a>
+        <nav>
+            <ul style="color: darkblue;">
+                <li><a href="index.html" target="_blank">Home</a></li>
+                <li><a href="pricing.html" target="_blank">Pricing</a></li>
+            </ul>
+        </nav>
+        <h1 class="script">Jamie's Bakery</h1>
+        <h2 class="script">For all your confectionary needs!</h2>
+        <p>Located in Hoosick Falls, NY and Rochester, NY</p>
+        <p>To contact, please send an email to jamiesbakery@gmail.com. When emailing for a specialty quote, please include...</p>
+    <div>
+        <ul style="color: darkblue;">
+            <li>Your name</li>
+            <li>The location and date of your event</li>
+            <li>How many people the dessert(s) must feed</li>
+            <li>Desired flavors, fillings, decorations, and any personalization</li>
+            <li>Any special dietary concerns (i.e. vegan, gluten free, etc.)</li>
+        </ul>
     </div>
-            </footer>
+     <div>
+         <p style="font-style: italic;">Thank you for your interest!</p>
+    </div>
+    </header>
+    <footer>
+        <div>
+        <img id="image" alt="blueberry muffins" src="CSS/images/blueberrymuffins.jpg">
+        </div>
+        &copy; 2018 Danner Enterprises
+    </footer>
 </body>
 </html>
