--- a/pricing.html
+++ b/pricing.html
@@ -3,38 +3,39 @@
 <head>
     <meta charset="utf-8">
     <title>Jamie's Bakery: Pricing</title>
-    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link rel="stylesheet" type="text/css" href="CSS/styles.css">
     <style>
         body {background-color: #f5d0d2;}
-        h1 {text-align: center;
-        border: 2px dashed #ffffff;}
-        h2 {text-align: center;}
-        p {font-size: 20px;
-        color: darkblue;
-        font-family: serif;}
-    </style>
-    
+    </style> 
 </head>
 <body>
     <header>
         <a href="index.html">
-                <img class="logo" src="CSS/images/cupcakelogo.png" alt="logo"/>
-    <div><h1 class="script">Jamie's Bakery</h1></div>
-    <div><h2 class="script">Pricing</h2></div>
-    <div><p>Please note: all prices are subject to change. Please contact me for a quote for a specialty cake or other special request.</p></div>
-    <div><ul style="color: darkblue;">
-        <li>Cupcakes: $22.00 per dozen</li>
-        <li>Pies: (seasonal flavors) $15.00 each</li>
-        <li>Custom Cakes: please contact me for a quote</li>
-        <li>Cookies: $12.00 per dozen</li>
-        <li>Pastries: $3.00 each, $24.00 per dozen</li>
-    </ul></div>
-            </header>
-        <footer>
-    <a href="contact.html" target="_blank">Contact</a>
-    <a href="index.html" target="_blank">Home</a>
-    <div>
-    <img id="image" alt="birthday cake" src="CSS/images/birthdaycake.jpg"></div>
-            </footer>
+            <img class="logo" src="CSS/images/cupcakelogo.png" alt="logo"/></a>
+        <nav>
+            <ul style="color: darkblue;">
+                <li><a href="contact.html" target="_blank">Contact</a></li>
+                <li><a href="index.html" target="_blank">Home</a></li>
+            </ul>
+        </nav>
+        <h1 class="script">Jamie's Bakery</h1>
+        <h2 class="script">Pricing</h2>
+        <p>Please note: all prices are subject to change. Please contact me for a quote for a specialty cake or other special request.</p>
+        <div>
+            <ul style="color: darkblue;">
+                <li>Cupcakes: $22.00 per dozen</li>
+                <li>Pies: (seasonal flavors) $15.00 each</li>
+                <li>Custom Cakes: please contact me for a quote</li>
+                <li>Cookies: $12.00 per dozen</li>
+                <li>Pastries: $3.00 each, $24.00 per dozen</li>
+            </ul>
+        </div>
+    </header>
+    <footer>
+        <div>
+            <img id="image" alt="birthday cake"     src="CSS/images/birthdaycake.jpg">
+        </div>
+        &copy; 2018 Danner Enterprises
+    </footer>
 </body>
 </html>
