--- a/index.html
+++ b/index.html
@@ -17,19 +17,22 @@
         </nav>
         <h1 class="script">Jamie's Bakery</h1>
         <h2 class="script">For all your confectionary needs!</h2>
-            <p style="text-align: left;">Services Include...</p>
+            
+                <p style="text-align: left;">Services Include...</p>
+        <div class="container">
             <ul>
                 <li>Cupcakes</li>
                 <li>Pies</li>
                 <li>Custom Cakes</li>
                 <li>Cookies</li>
             </ul>
+            <img alt="chocolate whoopie pies" src="CSS/images/whoopiepies.jpeg">
+            </div>
             <p style="font-style:italic;"> Please contact me for a quote. Let me make your next big event special!</p>
     </header>
     <footer>
-        <div>
+        <div class="container">
             <img id="image" alt="vanilla cupcakes" src="CSS/images/vanilla.jpg">
-            <img alt="chocolate whoopie pies" src="CSS/images/whoopiepies.jpeg">
         </div>
         &copy; 2018 Danner Enterprises
     </footer>
