Ready to Submit

--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     <header>
+    <div class="container">
         <a href="index.html">
             <img class="logo" src="CSS/images/cupcakelogo.png" alt="logo"/></a>
         <nav>
@@ -19,6 +20,7 @@
                 <li><a href="pricing.html" target="_blank">Pricing</a></li>
             </ul>
         </nav>
+    </div>
         <h1 class="script">Jamie's Bakery</h1>
         <h2 class="script">For all your confectionary needs!</h2>
         <p>Located in Hoosick Falls, NY and Rochester, NY</p>
@@ -32,14 +34,12 @@
             <li>Any special dietary concerns (i.e. vegan, gluten free, etc.)</li>
         </ul>
     </div>
-     <div>
+    <div class="container">
          <p style="font-style: italic;">Thank you for your interest!</p>
+         <img id="image" alt="blueberry muffins" src="CSS/images/blueberrymuffins.jpg">
     </div>
     </header>
     <footer>
-        <div>
-        <img id="image" alt="blueberry muffins" src="CSS/images/blueberrymuffins.jpg">
-        </div>
         &copy; 2018 Danner Enterprises
     </footer>
 </body>
