--- a/pricing.html
+++ b/pricing.html
@@ -10,32 +10,32 @@
 </head>
 <body>
     <header>
-        <a href="index.html">
+    <div class="container">
+            <a href="index.html">
             <img class="logo" src="CSS/images/cupcakelogo.png" alt="logo"/></a>
         <nav>
             <ul style="color: darkblue;">
-                <li><a href="contact.html" target="_blank">Contact</a></li>
                 <li><a href="index.html" target="_blank">Home</a></li>
+                <li><a href="pricing.html" target="_blank">Pricing</a></li>
             </ul>
         </nav>
+    </div>
         <h1 class="script">Jamie's Bakery</h1>
         <h2 class="script">Pricing</h2>
         <p>Please note: all prices are subject to change. Please contact me for a quote for a specialty cake or other special request.</p>
-        <div>
-            <ul style="color: darkblue;">
-                <li>Cupcakes: $22.00 per dozen</li>
-                <li>Pies: (seasonal flavors) $15.00 each</li>
-                <li>Custom Cakes: please contact me for a quote</li>
-                <li>Cookies: $12.00 per dozen</li>
-                <li>Pastries: $3.00 each, $24.00 per dozen</li>
-            </ul>
-        </div>
+    <div class="container">
+        <ul style="color: darkblue;">
+            <li>Cupcakes: $22.00 per dozen</li>
+            <li>Pies: (seasonal flavors) $15.00 each</li>
+            <li>Custom Cakes: please contact me for a quote</li>
+            <li>Cookies: $12.00 per dozen</li>
+            <li>Pastries: $3.00 each, $24.00 per dozen</li>
+        </ul>
+        <img id="image" alt="birthday cake"     src="CSS/images/birthdaycake.jpg">
+    </div>
     </header>
     <footer>
-        <div>
-            <img id="image" alt="birthday cake"     src="CSS/images/birthdaycake.jpg">
-        </div>
-        &copy; 2018 Danner Enterprises
+    &copy; 2018 Danner Enterprises
     </footer>
 </body>
 </html>
